@@ -1,3 +1,8 @@
+2008-10-24  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Utils.cc: Increased robustness of get_lang() function
+	  - Assists with GParted bug #556965
+
 2008-10-17  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Dialog_Progress.cc: Converted more words for translation
